corrected spelling of shell

--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -23,5 +23,5 @@ on:
       steps:
         - name: goodbye world
           run: echo "Goodbye world"
-          shel: bash
+          shell: bash
           
