--- a/.github/workflows/hello-world.yaml
+++ b/.github/workflows/hello-world.yaml
@@ -9,19 +9,19 @@ on:
         - main 
   workflow_dispatch:
 
-  job:
-    hello:
+jobs:
+   hello:
       runs-on:ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2 
-      - name: hello-world
-        run: echo "Basanta Sharam, Hello World"
-        shell: bash
+   steps:
+     - uses: actions/checkout@v2 
+     - name: hello-world
+       run: echo "Basanta Sharam, Hello World"
+       shell: bash
 
-    goodbye:
-      runs-on: ubuntu-latest
-      steps:
-        - name: goodbye world
-          run: echo "Goodbye world"
-          shell: bash
+   goodbye:
+     runs-on: ubuntu-latest
+     steps:
+       - name: goodbye world
+         run: echo "Goodbye world"
+         shell: bash
           
